// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCategories with a list of categories, with a selection snapshots 1`] = `
<header>
  Store Cupboard
  <ProductCategory
    active={false}
    key="1"
    onSelect={[Function]}
    title="title 1"
  />
  <ProductCategory
    active={true}
    key="2"
    onSelect={[Function]}
    title="title 2"
  />
  <ProductCategory
    active={false}
    key="3"
    onSelect={[Function]}
    title="title 3"
  />
  <ProductCategory
    active={false}
    key="4"
    onSelect={[Function]}
    title="title 4"
  />
</header>
`;

exports[`ProductCategories with a list of categories, without selection snapshots 1`] = `
<header>
  Store Cupboard
  <ProductCategory
    active={false}
    key="1"
    onSelect={[Function]}
    title="title 1"
  />
  <ProductCategory
    active={false}
    key="2"
    onSelect={[Function]}
    title="title 2"
  />
  <ProductCategory
    active={false}
    key="3"
    onSelect={[Function]}
    title="title 3"
  />
  <ProductCategory
    active={false}
    key="4"
    onSelect={[Function]}
    title="title 4"
  />
</header>
`;
